--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,13 @@ notifications:
   email:
     recipients:
     - j.garceran@alumnos.upm.es
+
+addons:
+  sonarcloud:
+    organization: "jesusgarce"
+    token:
+      secure: "**************************" # encrypted value of your token
+
+script:
+# the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
