--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,9 @@ notifications:
 
 addons:
   sonarcloud:
-    organization: "jesusgarce"
+    organization: "jesusgarce" # the key of the org you chose at step #3
     token:
-      secure: "**************************" # encrypted value of your token
-
+      secure: "*********" # encrypted value of your token
 script:
 # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.login=$SONAR
+- mvn clean verify sonar:sonar -Pcoverage -Dsonar.projectKey=iwvg-ecosystem-jesus-garceran
