--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ addons:
       secure: "*********" # encrypted value of your token
 script:
 # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-- mvn clean verify sonar:sonar -Pcoverage -Dsonar.projectKey=iwvg-ecosystem-jesus-garceran -Dsonar.login=SONAR_TOKEN
+- mvn clean verify sonar:sonar -Dsonar.projectKey=iwvg-ecosystem-jesus-garceran
