--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
 #Test unitario y de integracion con cobertura (jacoco)
 - mvn org.jacoco:jacoco-maven-plugin:prepare-agent verify
 # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-- mvn clean verify sonar:sonar -Dsonar.projectKey=iwvg-ecosystem-jesus-garceran
+- mvn clean verify sonar:sonar -Pcoverage -Dsonar.projectKey=iwvg-ecosystem-jesus-garceran
 
 
 
