--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <artifactId>iwvg-ecosystem-jesus-garceran</artifactId>
     <groupId>es.upm.jesusgarce</groupId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0-Release</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
